app/assets/stylesheets/layouts/management/l-widget-creation.scss
.l-widget-creation {
  // We make sure the fixed c-action-bar doesn't cover the content if the
  // screen has a small height
  padding-bottom: 75px;

  &.-dataset {
    display: flex;
    align-items: center;
    min-height: calc(100vh - 300px);
    padding-top: 50px;

    > .wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;
    }
  }

  &.-visualization {
    padding-top: 50px;
    padding-bottom: 75px; // Extra padding for the chart selector

    > .wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: start;

      > .widget-container {
        position: relative;
        width: 100%;
        margin-top: 70px;
      }

      .c-inputs-container {
        min-height: auto;
      }

      .c-we-widget-editor {
        width: 100%;
        margin-top: 40px;
        z-index: 1;

        .c-we-vega-chart-legend {
          // Bootstrap default styles mess up with the
          // chart's legend
          // This happens in the wysiwyg in the management section
          .legend .item .label {
            color: $color-4;
            font-size: inherit;
            font-weight: inherit;
            line-height: inherit;
            padding: inherit;
          }
        }
      }

      .advanced-editor {
        display: flex;
        justify-content: space-between;
        align-items: stretch;
        width: 100%;
        margin-top: 20px;

        > * {
          flex-basis: calc(50% - 5px);
          flex-grow: 0;
          height: 500px;
          overflow: auto; // Should be able to see the entire chart
        }

        .textarea-container {
          display: flex;
          flex-direction: column;
          flex-wrap: nowrap;
          margin-right: 10px;

          .c-inputs-container {
            margin-bottom: 20px;

            .container {
              padding-top: 15px;
              padding-bottom: 15px;
            }
          }
        }

        .CodeMirror {
          flex-grow: 1;
        }

        .c-we-chart {
          height: 100%;
        }
      }
    }
  }
}

